@@ -165,6 +165,7 @@ carbon copy
 * carbonText::                  make carbonCopy using text-field of msg
 * carbonArea::                  specify the area where the carbon copies go into
 * carbonAndQuit::               carbon message only one time
+* carbonKeepSb::                keep seen-by's and path
 
 areafix
 * areafixFromPkt::              process areafix requests on the fly
@@ -1193,6 +1194,8 @@ describe area
 %PAUSE has no effect to this area
 @item -ccoff
 disables carbonCopies for this area
+@item -keepsb
+keep seen-by's (used in CarbonCopy)
 @item -DupeCheck off|move|del
 toss in dupes, move dupes to dupeArea or delete dupes.
 @item -DupeHistory <unsignedInteger>
@@ -1505,7 +1508,7 @@ If this statement is ommitted. The carbon Copy goes to the badArea.
 This statement can be repeated for each different carbon@{To|From|Kludge@}
 statement.
 
-@node carbonAndQuit, areafixFromPkt, carbonArea, Keywords
+@node carbonAndQuit, CarbonKeepSb, carbonArea, Keywords
 @subsection carbonAndQuit
 @table @asis
 @item Syntax:
@@ -1519,6 +1522,19 @@ For example: you set CarbonTo "max" to echoarea MY.MAIL and CarbonSubj
 "beer" to echoarea MY.PLEASURE :-) And message to "max" and with this
 subject line carbons to each echoarea.
 If you turn on <carbonAndQuit> message will copy to MY.MAIL only.
+
+@node carbonKeepSb, areafixFromPkt, carbonAndQuit, Keywords
+@subsection carbonKeepSb
+@table @asis
+@item Syntax:
+@code{carbonKeepSb}
+@item Example:
+@code{carbonKeepSb}
+@end table
+
+For each CC message SEEN-BY's and PATH fields are killed. If you set up
+@code{carbonKeepSb} then all kludges will be saved. But you may also
+set up @code{-keepsb} in options of echoarea where you carbon messages.
 
 @node areafixFromPkt, areafixKillReports, carbonAndQuit, Keywords
 @subsection areafixFromPkt
